Add some 2022 pubs (PR #288)

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1731.g3dfe65d documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1795.gcdcd32d documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../_static/thetis.css" />
     <script data-url_root="../" id="documentation_options" src="../_static/documentation_options.js"></script>
@@ -59,6 +59,7 @@
 <li><a href="thetis/coordsys.html">thetis.coordsys</a></li>
 <li><a href="thetis/coupled_timeintegrator.html">thetis.coupled_timeintegrator</a></li>
 <li><a href="thetis/coupled_timeintegrator_2d.html">thetis.coupled_timeintegrator_2d</a></li>
+<li><a href="thetis/diagnostics.html">thetis.diagnostics</a></li>
 <li><a href="thetis/equation.html">thetis.equation</a></li>
 <li><a href="thetis/exner_eq.html">thetis.exner_eq</a></li>
 <li><a href="thetis/exporter.html">thetis.exporter</a></li>
@@ -95,7 +96,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.1.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
 </html>
