--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1731.g3dfe65d documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1795.gcdcd32d documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -1184,7 +1184,11 @@
 </li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.GeneralCoupledTimeIntegrator2D">GeneralCoupledTimeIntegrator2D (class in thetis.coupled_timeintegrator_2d)</a>
 </li>
+      <li><a href="thetis.html#thetis.forcing.GenericInterpolator2D">GenericInterpolator2D (class in thetis.forcing)</a>
+</li>
       <li><a href="thetis.html#thetis.turbulence.GenericLengthScaleModel">GenericLengthScaleModel (class in thetis.turbulence)</a>
+</li>
+      <li><a href="thetis.html#thetis.forcing.GenericSpatialInterpolator2D">GenericSpatialInterpolator2D (class in thetis.forcing)</a>
 </li>
       <li><a href="thetis.html#thetis.sediment_model.SedimentModel.get_advective_velocity_correction_factor">get_advective_velocity_correction_factor() (thetis.sediment_model.SedimentModel method)</a>
 </li>
@@ -1252,6 +1256,8 @@
 </li>
       <li><a href="thetis.html#thetis.utility.get_minimum_angles_2d">get_minimum_angles_2d() (in module thetis.utility)</a>
 </li>
+      <li><a href="thetis.html#thetis.interpolation.get_ncvar_name">get_ncvar_name() (in module thetis.interpolation)</a>
+</li>
       <li><a href="thetis.html#thetis.sediment_model.SedimentModel.get_sediment_slide_term">get_sediment_slide_term() (thetis.sediment_model.SedimentModel method)</a>
 </li>
       <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.get_sediment_timestepper">get_sediment_timestepper() (thetis.solver2d.FlowSolver2d method)</a>
@@ -1307,6 +1313,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.exporter.HDF5Exporter">HDF5Exporter (class in thetis.exporter)</a>
+</li>
+      <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D">HessianRecoverer2D (class in thetis.diagnostics)</a>
 </li>
       <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity attribute)</a>
 </li>
@@ -1391,6 +1399,8 @@
       <li><a href="thetis.html#thetis.options.ImplicitSWETimeStepperOptions3d">ImplicitSWETimeStepperOptions3d (class in thetis.options)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ImplicitTracerTimeStepperOptions3d">ImplicitTracerTimeStepperOptions3d (class in thetis.options)</a>
+</li>
+      <li><a href="thetis.html#thetis.shallowwater_eq.ShallowWaterTerm.impose_dynamic_bnd">impose_dynamic_bnd() (thetis.shallowwater_eq.ShallowWaterTerm method)</a>
 </li>
       <li><a href="thetis.html#thetis.log.info">info() (in module thetis.log)</a>
 
@@ -1500,9 +1510,11 @@
 </li>
       <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator">InternalPressureGradientCalculator (class in thetis.momentum_eq)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM2d.interpolate">interpolate() (thetis.forcing.SpatialInterpolatorNCOM2d method)</a>
+      <li><a href="thetis.html#thetis.forcing.GenericSpatialInterpolator2D.interpolate">interpolate() (thetis.forcing.GenericSpatialInterpolator2D method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM2d.interpolate">(thetis.forcing.SpatialInterpolatorNCOM2d method)</a>
+</li>
         <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM3d.interpolate">(thetis.forcing.SpatialInterpolatorNCOM3d method)</a>
 </li>
         <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorROMS3d.interpolate">(thetis.forcing.SpatialInterpolatorROMS3d method)</a>
@@ -1753,6 +1765,8 @@
         <li><a href="thetis.html#module-thetis.coupled_timeintegrator">thetis.coupled_timeintegrator</a>
 </li>
         <li><a href="thetis.html#module-thetis.coupled_timeintegrator_2d">thetis.coupled_timeintegrator_2d</a>
+</li>
+        <li><a href="thetis.html#module-thetis.diagnostics">thetis.diagnostics</a>
 </li>
         <li><a href="thetis.html#module-thetis.equation">thetis.equation</a>
 </li>
@@ -2175,8 +2189,6 @@
 </li>
       <li><a href="thetis.html#thetis.callback.ScalarConservationCallback">ScalarConservationCallback (class in thetis.callback)</a>
 </li>
-      <li><a href="thetis.html#thetis.interpolation.NetCDFTimeParser.scalars">scalars (thetis.interpolation.NetCDFTimeParser attribute)</a>
-</li>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.schmidt_nb_psi">schmidt_nb_psi (thetis.options.GLSModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.schmidt_nb_tke">schmidt_nb_tke (thetis.options.GLSModelOptions attribute)</a>
@@ -2234,6 +2246,8 @@
       <li><a href="thetis.html#thetis.forcing.ATMInterpolator.set_fields">set_fields() (thetis.forcing.ATMInterpolator method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.forcing.GenericInterpolator2D.set_fields">(thetis.forcing.GenericInterpolator2D method)</a>
+</li>
         <li><a href="thetis.html#thetis.forcing.LiveOceanInterpolator.set_fields">(thetis.forcing.LiveOceanInterpolator method)</a>
 </li>
         <li><a href="thetis.html#thetis.forcing.NCOMInterpolator.set_fields">(thetis.forcing.NCOMInterpolator method)</a>
@@ -2309,9 +2323,13 @@
 </li>
       <li><a href="thetis.html#thetis.utility3d.SmagorinskyViscosity">SmagorinskyViscosity (class in thetis.utility3d)</a>
 </li>
-      <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator.solve">solve() (thetis.momentum_eq.InternalPressureGradientCalculator method)</a>
+      <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.solve">solve() (thetis.diagnostics.HessianRecoverer2D method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.diagnostics.VorticityCalculator2D.solve">(thetis.diagnostics.VorticityCalculator2D method)</a>
+</li>
+        <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator.solve">(thetis.momentum_eq.InternalPressureGradientCalculator method)</a>
+</li>
         <li><a href="thetis.html#thetis.turbulence.BuoyFrequencySolver.solve">(thetis.turbulence.BuoyFrequencySolver method)</a>
 </li>
         <li><a href="thetis.html#thetis.turbulence.ShearFrequencySolver.solve">(thetis.turbulence.ShearFrequencySolver method)</a>
@@ -2319,8 +2337,6 @@
         <li><a href="thetis.html#thetis.turbulence.VerticalGradSolver.solve">(thetis.turbulence.VerticalGradSolver method)</a>
 </li>
         <li><a href="thetis.html#thetis.utility.DepthIntegratedPoissonSolver.solve">(thetis.utility.DepthIntegratedPoissonSolver method)</a>
-</li>
-        <li><a href="thetis.html#thetis.utility.VorticityCalculator2D.solve">(thetis.utility.VorticityCalculator2D method)</a>
 </li>
         <li><a href="thetis.html#thetis.utility3d.DensitySolver.solve">(thetis.utility3d.DensitySolver method)</a>
 </li>
@@ -2551,6 +2567,13 @@
 
       <ul>
         <li><a href="thetis.html#module-thetis.coupled_timeintegrator_2d">module</a>
+</li>
+      </ul></li>
+      <li>
+    thetis.diagnostics
+
+      <ul>
+        <li><a href="thetis.html#module-thetis.diagnostics">module</a>
 </li>
       </ul></li>
       <li>
@@ -2915,6 +2938,8 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.utility.unfrozen">unfrozen() (in module thetis.utility)</a>
+</li>
       <li><a href="thetis.html#thetis.assembledschur.AssembledSchurPC.update">update() (thetis.assembledschur.AssembledSchurPC method)</a>
 
       <ul>
@@ -3141,7 +3166,7 @@
 </li>
       <li><a href="thetis.html#thetis.callback.VolumeConservation3DCallback">VolumeConservation3DCallback (class in thetis.callback)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.VorticityCalculator2D">VorticityCalculator2D (class in thetis.utility)</a>
+      <li><a href="thetis.html#thetis.diagnostics.VorticityCalculator2D">VorticityCalculator2D (class in thetis.diagnostics)</a>
 </li>
       <li><a href="thetis.html#thetis.exporter.VTKExporter">VTKExporter (class in thetis.exporter)</a>
 </li>
@@ -3181,7 +3206,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.1.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
 </html>
