--- a/_modules/thetis/exner_eq.html
+++ b/_modules/thetis/exner_eq.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.exner_eq &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>thetis.exner_eq &#8212; Thetis 0+untagged.1793.g290af40 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -68,8 +68,6 @@
 <span class="sd">:math:`\nabla_h` denotes horizontal gradient, :math:`m` is the morphological scale factor,</span>
 <span class="sd">:math:`p` is the porosity and :math:`\textbf{Q_b}` is the bedload transport vector</span>
 <span class="sd">&quot;&quot;&quot;</span>
-
-<span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">absolute_import</span>
 <span class="kn">from</span> <span class="nn">.equation</span> <span class="kn">import</span> <span class="n">Term</span><span class="p">,</span> <span class="n">Equation</span>
 <span class="kn">from</span> <span class="nn">.utility</span> <span class="kn">import</span> <span class="o">*</span>
 
@@ -240,7 +238,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
 </html>
