--- a/_modules/thetis/stability_functions.html
+++ b/_modules/thetis/stability_functions.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
-    <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
-    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
+    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1793.g290af40 documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
+    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -38,7 +37,6 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -89,8 +87,7 @@
 <span class="sd">http://dx.doi.org/10.1357/002224003322005087</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">absolute_import</span>
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">numpy</span>
 <span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
 <span class="kn">from</span> <span class="nn">scipy.optimize</span> <span class="kn">import</span> <span class="n">minimize</span>
 <span class="kn">from</span> <span class="nn">.log</span> <span class="kn">import</span> <span class="n">print_output</span>
@@ -228,7 +225,7 @@
             <span class="n">a</span> <span class="o">=</span> <span class="o">-</span><span class="bp">self</span><span class="o">.</span><span class="n">d5</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">n2</span> <span class="o">-</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d3</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">n1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb2</span><span class="p">)</span><span class="o">*</span><span class="n">ri_st</span> <span class="o">-</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb1</span><span class="p">)</span><span class="o">*</span><span class="n">ri_st</span><span class="o">**</span><span class="mi">2</span>
             <span class="n">b</span> <span class="o">=</span> <span class="o">-</span><span class="bp">self</span><span class="o">.</span><span class="n">d2</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">n0</span> <span class="o">-</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb0</span><span class="p">)</span><span class="o">*</span><span class="n">ri_st</span>
             <span class="n">c</span> <span class="o">=</span> <span class="o">-</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span>
-            <span class="n">a_shear</span> <span class="o">=</span> <span class="p">(</span><span class="o">-</span><span class="n">b</span> <span class="o">+</span> <span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">b</span><span class="o">**</span><span class="mi">2</span> <span class="o">-</span> <span class="mi">4</span><span class="o">*</span><span class="n">a</span><span class="o">*</span><span class="n">c</span><span class="p">))</span><span class="o">/</span><span class="mi">2</span><span class="o">/</span><span class="n">a</span>
+            <span class="n">a_shear</span> <span class="o">=</span> <span class="p">(</span><span class="o">-</span><span class="n">b</span> <span class="o">+</span> <span class="n">numpy</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">b</span><span class="o">**</span><span class="mi">2</span> <span class="o">-</span> <span class="mi">4</span><span class="o">*</span><span class="n">a</span><span class="o">*</span><span class="n">c</span><span class="p">))</span><span class="o">/</span><span class="mi">2</span><span class="o">/</span><span class="n">a</span>
 
         <span class="k">return</span> <span class="n">a_shear</span></div>
 
@@ -257,7 +254,7 @@
 
         <span class="c1"># check error in ri_st</span>
         <span class="n">err</span> <span class="o">=</span> <span class="n">s_m</span><span class="o">/</span><span class="n">s_h</span><span class="o">*</span><span class="p">(</span><span class="n">c2</span> <span class="o">-</span> <span class="n">c1</span><span class="p">)</span><span class="o">/</span><span class="p">(</span><span class="n">c2</span> <span class="o">-</span> <span class="n">c3_minus</span><span class="p">)</span> <span class="o">-</span> <span class="n">ri_st</span>
-        <span class="k">assert</span> <span class="n">np</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">err</span><span class="p">)</span> <span class="o">&lt;</span> <span class="mf">1e-5</span><span class="p">,</span> <span class="s1">&#39;steady state gradient Richardson number does not match&#39;</span>
+        <span class="k">assert</span> <span class="n">numpy</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">err</span><span class="p">)</span> <span class="o">&lt;</span> <span class="mf">1e-5</span><span class="p">,</span> <span class="s1">&#39;steady state gradient Richardson number does not match&#39;</span>
 
         <span class="k">return</span> <span class="n">c3_minus</span></div>
 
@@ -276,7 +273,7 @@
             <span class="n">a</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">d5</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">n2</span>
             <span class="n">b</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">d2</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">n0</span>
             <span class="n">c</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">d0</span>
-            <span class="n">a_shear</span> <span class="o">=</span> <span class="p">(</span><span class="o">-</span><span class="n">b</span> <span class="o">-</span> <span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">b</span><span class="o">**</span><span class="mi">2</span> <span class="o">-</span> <span class="mi">4</span><span class="o">*</span><span class="n">a</span><span class="o">*</span><span class="n">c</span><span class="p">))</span><span class="o">/</span><span class="mi">2</span><span class="o">/</span><span class="n">a</span>
+            <span class="n">a_shear</span> <span class="o">=</span> <span class="p">(</span><span class="o">-</span><span class="n">b</span> <span class="o">-</span> <span class="n">numpy</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">b</span><span class="o">**</span><span class="mi">2</span> <span class="o">-</span> <span class="mi">4</span><span class="o">*</span><span class="n">a</span><span class="o">*</span><span class="n">c</span><span class="p">))</span><span class="o">/</span><span class="mi">2</span><span class="o">/</span><span class="n">a</span>
             <span class="n">s_m</span><span class="p">,</span> <span class="n">s_h</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">eval_funcs</span><span class="p">(</span><span class="n">a_buoy</span><span class="p">,</span> <span class="n">a_shear</span><span class="p">)</span>
             <span class="n">cm0</span> <span class="o">=</span> <span class="n">s_m</span><span class="o">**</span><span class="mf">0.25</span>
         <span class="k">else</span><span class="p">:</span>
@@ -301,7 +298,7 @@
 <span class="sd">        :arg sigma_psi: Psi Schmidt number</span>
 <span class="sd">        :arg cmu0, n, c1, c2: GLS model parameters</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">cmu0</span> <span class="o">/</span> <span class="n">np</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">n</span><span class="p">)</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">sigma_psi</span> <span class="o">*</span> <span class="p">(</span><span class="n">c2</span> <span class="o">-</span> <span class="n">c1</span><span class="p">))</span></div>
+        <span class="k">return</span> <span class="n">cmu0</span> <span class="o">/</span> <span class="n">numpy</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">n</span><span class="p">)</span> <span class="o">*</span> <span class="n">numpy</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">sigma_psi</span> <span class="o">*</span> <span class="p">(</span><span class="n">c2</span> <span class="o">-</span> <span class="n">c1</span><span class="p">))</span></div>
 
 <div class="viewcode-block" id="StabilityFunctionBase.compute_sigma_psi"><a class="viewcode-back" href="../../thetis.html#thetis.stability_functions.StabilityFunctionBase.compute_sigma_psi">[docs]</a>    <span class="k">def</span> <span class="nf">compute_sigma_psi</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">kappa</span><span class="p">,</span> <span class="n">cmu0</span><span class="p">,</span> <span class="n">n</span><span class="p">,</span> <span class="n">c1</span><span class="p">,</span> <span class="n">c2</span><span class="p">):</span>
         <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
@@ -326,7 +323,7 @@
         <span class="c1"># compute aN from Ri_st and aM, Ri_st = aN/aM</span>
         <span class="n">a_buoy</span> <span class="o">=</span> <span class="n">ri_st</span><span class="o">*</span><span class="n">a_shear</span>
 
-        <span class="n">clim</span> <span class="o">=</span> <span class="n">cmu0</span><span class="o">**</span><span class="mf">3.0</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">a_buoy</span><span class="o">/</span><span class="mi">2</span><span class="p">)</span>
+        <span class="n">clim</span> <span class="o">=</span> <span class="n">cmu0</span><span class="o">**</span><span class="mf">3.0</span> <span class="o">*</span> <span class="n">numpy</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">a_buoy</span><span class="o">/</span><span class="mi">2</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">clim</span></div>
 
 <div class="viewcode-block" id="StabilityFunctionBase.get_alpha_buoy_min"><a class="viewcode-back" href="../../thetis.html#thetis.stability_functions.StabilityFunctionBase.get_alpha_buoy_min">[docs]</a>    <span class="k">def</span> <span class="nf">get_alpha_buoy_min</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -336,7 +333,7 @@
 <span class="sd">        See: Umlauf and Buchard (2005), Table 3</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># G = epsilon case, this is used in GOTM</span>
-        <span class="n">an_min</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">((</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb0</span><span class="p">)</span><span class="o">**</span><span class="mf">2.</span> <span class="o">-</span> <span class="mf">4.</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb1</span><span class="p">))</span> <span class="o">-</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb0</span><span class="p">))</span><span class="o">/</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb1</span><span class="p">)</span>
+        <span class="n">an_min</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="p">(</span><span class="n">numpy</span><span class="o">.</span><span class="n">sqrt</span><span class="p">((</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb0</span><span class="p">)</span><span class="o">**</span><span class="mf">2.</span> <span class="o">-</span> <span class="mf">4.</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">d0</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb1</span><span class="p">))</span> <span class="o">-</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d1</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb0</span><span class="p">))</span><span class="o">/</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">d4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">nb1</span><span class="p">)</span>
         <span class="c1"># eq. (47)</span>
         <span class="c1"># an_min = self.alpha_buoy_min</span>
         <span class="k">return</span> <span class="n">an_min</span></div>
@@ -400,7 +397,7 @@
             <span class="c1"># limit min (negative) alpha_buoy (Umlauf and Burchard, 2005)</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">smooth_alpha_buoy_lim</span><span class="p">:</span>
                 <span class="c1"># crop at minimum value</span>
-                <span class="n">np</span><span class="o">.</span><span class="n">maximum</span><span class="p">(</span><span class="n">alpha_buoy</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_alpha_buoy_min</span><span class="p">(),</span> <span class="n">alpha_buoy</span><span class="p">)</span>
+                <span class="n">numpy</span><span class="o">.</span><span class="n">maximum</span><span class="p">(</span><span class="n">alpha_buoy</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_alpha_buoy_min</span><span class="p">(),</span> <span class="n">alpha_buoy</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="c1"># do smooth limiting instead (Buchard and Petersen, 1999, eq 19)</span>
                 <span class="n">ab_smooth_min</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_alpha_buoy_smooth_min</span><span class="p">(</span><span class="n">alpha_buoy</span><span class="p">)</span>
@@ -411,7 +408,7 @@
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">lim_alpha_shear</span><span class="p">:</span>
             <span class="c1"># limit max alpha_shear (Umlauf and Burchard, 2005, eq 44)</span>
             <span class="n">as_max</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_alpha_shear_max</span><span class="p">(</span><span class="n">alpha_buoy</span><span class="p">,</span> <span class="n">alpha_shear</span><span class="p">)</span>
-            <span class="n">np</span><span class="o">.</span><span class="n">minimum</span><span class="p">(</span><span class="n">alpha_shear</span><span class="p">,</span> <span class="n">as_max</span><span class="p">,</span> <span class="n">alpha_shear</span><span class="p">)</span>
+            <span class="n">numpy</span><span class="o">.</span><span class="n">minimum</span><span class="p">(</span><span class="n">alpha_shear</span><span class="p">,</span> <span class="n">as_max</span><span class="p">,</span> <span class="n">alpha_shear</span><span class="p">)</span>
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">eval_funcs</span><span class="p">(</span><span class="n">alpha_buoy</span><span class="p">,</span> <span class="n">alpha_shear</span><span class="p">)</span></div></div>
 
@@ -887,8 +884,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
 </html>
