--- a/_modules/thetis/tracer_eq_2d.html
+++ b/_modules/thetis/tracer_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.tracer_eq_2d &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>thetis.tracer_eq_2d &#8212; Thetis 0+untagged.1793.g290af40 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -66,7 +66,6 @@
 <span class="sd">velocities, and</span>
 <span class="sd">:math:`\mu_h` denotes horizontal diffusivity.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">absolute_import</span>
 <span class="kn">from</span> <span class="nn">.utility</span> <span class="kn">import</span> <span class="o">*</span>
 <span class="kn">from</span> <span class="nn">.equation</span> <span class="kn">import</span> <span class="n">Term</span><span class="p">,</span> <span class="n">Equation</span>
 
@@ -339,11 +338,11 @@
         <span class="k">if</span> <span class="n">options</span><span class="o">.</span><span class="n">use_supg_tracer</span><span class="p">:</span>
             <span class="n">unorm</span> <span class="o">=</span> <span class="n">options</span><span class="o">.</span><span class="n">horizontal_velocity_scale</span>
             <span class="k">if</span> <span class="n">unorm</span><span class="o">.</span><span class="n">values</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
-                <span class="n">cellsize</span> <span class="o">=</span> <span class="n">anisotropic_cell_size</span><span class="p">(</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">())</span>
-                <span class="n">tau</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="n">cellsize</span><span class="o">/</span><span class="n">unorm</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">cellsize</span> <span class="o">=</span> <span class="n">anisotropic_cell_size</span><span class="p">(</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">())</span>
+                <span class="n">tau</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">cellsize</span><span class="o">/</span><span class="n">unorm</span>
                 <span class="n">D</span> <span class="o">=</span> <span class="n">options</span><span class="o">.</span><span class="n">horizontal_diffusivity_scale</span>
                 <span class="k">if</span> <span class="n">D</span><span class="o">.</span><span class="n">values</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
-                    <span class="n">Pe</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="n">unorm</span><span class="o">*</span><span class="n">cellsize</span><span class="o">/</span><span class="n">D</span>
+                    <span class="n">Pe</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="n">unorm</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">cellsize</span><span class="o">/</span><span class="n">D</span>
                     <span class="n">tau</span> <span class="o">=</span> <span class="n">min_value</span><span class="p">(</span><span class="n">tau</span><span class="p">,</span> <span class="n">Pe</span><span class="o">/</span><span class="mi">3</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">test</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span> <span class="o">+</span> <span class="n">tau</span><span class="o">*</span><span class="n">dot</span><span class="p">(</span><span class="n">velocity</span><span class="p">,</span> <span class="n">grad</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="p">))</span>
                 <span class="n">kwargs</span><span class="p">[</span><span class="s1">&#39;test_function&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span>
@@ -366,7 +365,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
     </div>
   </body>
 </html>
